--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,9 @@ body {
         right: 100%;
     }
 }
+
+@media (max-width: 500px) {
+    .pipe {
+        animation: pipe-animation 1s infinite linear;
+    }
+}
